# network-cards

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  setup.cfg
citation/: citation.bib  citation.ris
src/: Makefile  __init__.py  format_helpers.py  make_templates.py  network_cards.py  schema2table.py  test_network_cards.py
src/network_cards/: __init__.py  network_cards.py
src/schema/v0.0.1/: network_card.schema.json
src/schema/v0.0.2/: network_card.schema.json
templates/: directed_unweighted.tex  directed_unweighted.xlsx  directed_weighted.tex  directed_weighted.xlsx  undirected_unweighted_connected.tex  undirected_unweighted_connected.xlsx  undirected_unweighted_unconnected.tex  undirected_unweighted_unconnected.xlsx  undirected_weighted_connected.tex  undirected_weighted_connected.xlsx  undirected_weighted_unconnected.tex  undirected_weighted_unconnected.xlsx
