[tool.poetry]
name = "network-cards"
version = "0.99.2.2"
description = "Concise, readable summaries of network data"
authors = ["James Bagrow"]
readme = "README.md"
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.8"
networkx = "^2.8.2"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
