[metadata]
name = network_cards
version = attr: network_cards.__version__
author = James Bagrow
description = Network Cards - concise, readable summaries of network data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/network-cards/network-cards
project_urls =
    Bug Tracker = https://github.com/network-cards/network-cards/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir=
    =src
pakages=find:
python_requires = >=3.8
install_requires=
    pandas
    networkx

[options.packages.find]
where=src

